--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,8 @@ table {
   cursor: pointer;
   height: 10rem;
   width: 10rem;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .empty:hover {
