--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,7 @@ section {
 }
 
 body {
-  color: blue;
+  color: #00f;
   font-family: 'Roboto', serif;
   font-size: 16px;
   line-height: 1;
@@ -158,7 +158,7 @@ table {
 }
 
 .current_player {
-  background-color: blue;
+  background-color: #00f;
   color: #fff;
 }
 
@@ -201,4 +201,23 @@ table {
   position: absolute;
   text-align: center;
   top: 10rem;
+}
+
+#reset {
+  font-size: 1.3rem;
+  font-weight: 900;
+  padding: 0.8rem 1.5rem;
+  margin: 0 4rem;
+  background-color: #00f;
+  color: #fff;
+  box-shadow: 0.2rem 0.2rem gray;
+}
+
+#reset:hover {
+  background-color: #21729f;
+}
+
+#reset:active {
+  background-color: #00f;
+  box-shadow: 0 0 0.2rem 0.2rem gray;
 }
